--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -49,7 +49,8 @@
 }
 
 .main-visual-item {
-    width:100%;
+    max-width: 1200px;
+    margin: 0 auto;
     height:100%;
     position: relative;
     z-index: 10;
@@ -57,9 +58,15 @@
 }
 
 .main-visual-txt {
-    position: absolute;
-    top:40%;
-    left: 20%;
+   width: 100%;
+   height: 100%;
+   display: table;
+   table-layout: fixed;
+}
+
+.main-visual-txt .txt {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .main-visual-item .tit {
@@ -76,15 +83,14 @@
 
 .main-story {
     background-image: url("../images/main/main-story.jpg");
-    height: 575px;
 }
 
 .main-story-box {
     padding: 0 60px;
-    display: table;
-    width: 100%;
-    height: 100%;
-    table-layout: fixed;
+}
+
+.story-cont {
+    padding: 200px 0;
 }
 
 .story-box {
@@ -93,17 +99,10 @@
     margin: 0 auto;
 }
 
-.story-cont {
-    display: table-cell;
-    vertical-align: middle;
-    width: 100%;
-    height: 100%;
-    padding: 200px 0;
-}
-
 .story-box .tit-box {
     height: 150px;
 }
+
 .story-box .tit {
     font-size: 35px;
     color: #fff;
@@ -363,4 +362,86 @@
 .quick-cont p span {
     font-size:  13px;
     font-weight: normal;
+}
+
+@media all and (max-width:1023px){
+	
+	.main-story {
+		height: auto;
+	}
+	
+	.main-story-box {
+		padding: 0 10px;
+	}
+	
+	.story-cont {
+		padding: 50px 0;
+	}
+	
+	.story-cont .story-box {
+		float: none;
+		width: 100%;
+		margin-bottom: 50px;
+	}
+	
+	.story-cont .story-box:last-child {
+		margin-bottom: 0;
+	}
+}
+
+@media all and (max-width:767px) {
+	
+	.main-visual-item {
+		padding: 0 10px;
+	}
+	
+	.main-visual-item .tit {
+		font-size: 30px;
+	}
+	
+	.cont-container {
+		padding: 0 10px;
+	}
+	
+	.best-cont {
+		float: none;
+		width: 100%;
+		margin-bottom: 80px;
+	}
+	
+	.best-cont:last-child {
+		margin-bottom: 0;
+	}
+	
+	.best-img {
+		height: 300px;
+		line-height: 300px;
+		text-align: center;
+	}
+	
+	.best-img img {
+		position: static;
+		margin: 0;
+		top: 0;
+		left: 0;
+		vertical-align: middle;
+	}
+	
+	.main-info-col {
+		float: none;
+		width: 100%;
+	}
+	
+	.quick-lst li {
+		width: 15.333333333%;
+		height: 65px;
+	}
+	
+	.quick-box {
+		margin-bottom: 30px;
+	}
+	
+	.store-cont li {
+		display: block;
+	}
 }
